fix align

--- a/public/css/suggest.css
+++ b/public/css/suggest.css
@@ -29,7 +29,7 @@
 
 .person-item {
 	display: inline-block;
-	margin: 0 20px 25px 0;
+	margin: 0 10px 25px;
 	width: 100px;
 }
 
